<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pergunta1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.appfirebaserest.activity.SolicitationActivity">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/whiteColor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_information"
                android:layout_margin="16dp"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@color/whiteColor"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:padding="20dp"
            android:gravity="center|left"
            android:background="#e2e2e2"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_motivo_solicitacao"
                android:textColor="@color/colorPrimary"/>

            <EditText
                android:id="@+id/et_urgency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="top"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"
                android:hint="@string/text_urgency"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_nivel_consciencia"
                android:textColor="@color/colorPrimary"/>

            <Spinner
                android:id="@+id/s_consciencia"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_gravity="left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_nivel_respiracao"
                android:textColor="@color/colorPrimary"/>

            <Spinner
                android:id="@+id/s_respiracao"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_gravity="left" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:background="@color/colorPrimary"
            android:text="@string/text_next"
            android:textColor="@color/whiteColor"
            android:onClick="sendSolicitation"/>

</LinearLayout>
