<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:background="@color/whiteColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context="com.example.appfirebaserest.activity.SignInActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blackColor"
        android:textColorHint="@color/blackColor"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:drawableRight="@drawable/ic_action_email"
            android:hint="@string/hint_e_mail"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textAppearance="?android:textAppearanceMedium" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blackColor"
        android:textColorHint="@color/blackColor"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:drawableRight="@drawable/ic_action_password"
            android:hint="@string/text_senha"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/blackColor"
            android:textColorHint="@color/blackColor" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blackColor"
        android:textColorHint="@color/blackColor"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:drawableRight="@drawable/ic_action_password"
            android:hint="@string/text_confirmar_senha"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/blackColor"
            android:textColorHint="@color/blackColor" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/text_cadastrar"
        android:textColor="@color/whiteColor"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_blue"
        android:layout_marginTop="8dp"
        android:onClick="signUp"/>

</LinearLayout>